[package]
name = "lfrp-macros"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
proc-macro = true

[features]
print-codegen = ["rustfmt"]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

rustfmt = { version = "0.10.0", optional = true }

[dependencies.syn]
version = "1.0"
features = ["full", "extra-traits"]

