[package]
name = "lrfrp-examples-no_std"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lrfrp-macros = { path = "../lrfrp-macros", version = "0.1.0", features = [] }
libc = "0.2"
